# Gewist

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Editor.tsx  Preview.tsx  Sidebar.tsx  Toolbar.tsx
src/lib/: config.ts  markdown.ts
src/resources/: default-content.md
src/store/: useStore.ts
